TRIAL with google static map api: working

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <input name="question" id="question"></input><br/>
             <input type="submit" value="Envoyer" id="button"/>
         </form>
+
+        <div id = 'googleMap'></div>
         
     </section>
     <footer>
