REPLACED api static map for api js map, more convenient

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input type="submit" value="Envoyer" id="button"/>
         </form>
 
-        <div id = 'googleMap'></div>
+        <div id = "map"></div>
         
     </section>
     <footer>
